--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,9 @@ apply plugin: 'com.android.application'
 // Androidx Safe Args
 apply plugin: 'androidx.navigation.safeargs'
 
+// used for Firebase authentication
+apply plugin: 'com.google.gms.google-services'
+
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
@@ -41,6 +44,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:19.2.1'
     implementation 'com.google.firebase:firebase-core:17.3.0'
     implementation 'com.google.firebase:firebase-storage:19.1.1'
+
+    // custom EditText for Login and Register fragments
+    //implementation 'com.rengwuxian.materialedittext:library:2.1.4'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
