--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,9 @@ buildscript {
         // Androidx Safe Args
         classpath 'androidx.navigation:navigation-safe-args-gradle-plugin:2.2.1'
 
+        // used for Firebase authentication
+        classpath 'com.google.gms:google-services:4.3.3'
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
