--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher_cap"
+        android:icon="@mipmap/ic_launcher_cap_alt"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_cap"
+        android:roundIcon="@mipmap/ic_launcher_cap_alt"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
@@ -15,7 +15,9 @@
         <activity
             android:name=".LoginActivity"
             android:parentActivityName=".StartActivity" />
-        <activity android:name=".MainActivity" />
+        <activity
+            android:name=".MainActivity"
+            android:parentActivityName=".StartActivity" />
         <activity android:name=".StartActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
