--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:17.3.0'
     implementation 'com.google.firebase:firebase-storage:19.1.1'
 
+    // Glide for image loading
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+
     // circle imageView for profile images
     implementation 'de.hdodenhof:circleimageview:2.2.0'
 
