--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".NewMessageActivity"
+            android:parentActivityName=".MainActivity"/>
+        <activity
             android:name=".RegisterActivity"
             android:parentActivityName=".StartActivity" />
         <activity
