Implemented chats fragment with adapter

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,9 @@ dependencies {
     // circle imageView for profile images
     implementation 'de.hdodenhof:circleimageview:2.2.0'
 
+    // pretty dates
+    implementation 'org.ocpsoft.prettytime:prettytime:4.0.5.Final'
+
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
