--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,10 +40,14 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.2.1'
 
     // Firebase dependencies
-    implementation 'com.google.firebase:firebase-auth:19.3.0'
-    implementation 'com.google.firebase:firebase-database:19.2.1'
-    implementation 'com.google.firebase:firebase-core:17.3.0'
+//    implementation 'com.google.firebase:firebase-auth:19.3.0'
+//    implementation 'com.google.firebase:firebase-database:19.2.1'
+//    implementation 'com.google.firebase:firebase-core:17.3.0'
+    implementation 'com.google.firebase:firebase-auth:19.3.1'
+    implementation 'com.google.firebase:firebase-database:19.3.0'
+    implementation 'com.google.firebase:firebase-core:17.4.1'
     implementation 'com.google.firebase:firebase-storage:19.1.1'
+    implementation 'com.google.firebase:firebase-messaging:20.2.0'
 
     // Glide for image loading
     implementation 'com.github.bumptech.glide:glide:4.8.0'
