--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,10 @@ dependencies {
     // pretty dates
     implementation 'org.ocpsoft.prettytime:prettytime:4.0.5.Final'
 
+    // url previews
+    implementation 'org.jsoup:jsoup:1.13.1'
+
+
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
